Added background color modification dialog in developer menu
Added dialog on startup failure
Fixed antialiasing startup bug
# 0.00.16 (55371) Aug 17, 2011
# 0.00.15 (55357) Aug 16, 2011
If the mouse is in front of a grabbable object, show a hand cursor
Fixed: Cursor remains as East-West cursor when in the play area
# 0.00.14 (55300) Aug 16, 2011
# 0.00.13 (55221) Aug 15, 2011
# 0.00.12 (55201) Aug 14, 2011
# 0.00.11 (55172) Aug 13, 2011
# 0.00.10 (55009) Aug 9, 2011
# 0.00.09 (54317) Jul 20, 2011
# 0.00.08 (53658) Jun 30, 2011
Use java.io.tmpdir for storing the native libraries
# 0.00.07 (53655) Jun 30, 2011
Updated main to use PhetFrame
Launch the jme canvas within a tabbed PiccoloPhetApplication
Launch the jme application within a PhetFrame, adding the file and help-> about menus
Launch the jme application within a swing window
Removed unused code for skipping java.library.path modification
# 0.00.06 (53639) Jun 30, 2011
Feasibility test for skipping java.library.path modification
# 0.00.05 (53630) Jun 30, 2011
# 0.00.04 (53629) Jun 30, 2011
# 0.00.03 (53601) Jun 30, 2011
# 0.00.02 (53600) Jun 30, 2011
# 0.00.01 (53577) Jun 29, 2011
Added Molecule Shapes